--- a/edge-centerseekbar/build.gradle
+++ b/edge-centerseekbar/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 android {
     compileSdkVersion 26
 
@@ -23,16 +22,7 @@ android {
     }
 
 }
-publish {
-    userOrg = 'edgejh'
-    groupId = 'com.edge.edge_centerseekbar'
-    artifactId = 'centerseekbar'
-    publishVersion = '1.0.1'
-    desc = 'Android CenterStart Custom Seekbar'
-    website = 'https://github.com/EdgeJH/CenterSeekBarmaster'
-    issueTracker = "${website}/issues"
-    repository = "${website}.git"
-}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -42,3 +32,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
 
+apply plugin: 'com.github.dcendents.android-maven'
+group='com.github.EdgeJH'
